--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {background: #3a3a3a;}
 body {background-color: yellow;} 
+.head {position: absolute;}
 .text {
     position: absolute;
     top: 50%; 
