--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body {background-color: yellow;}
 .head {position: absolute;}
 .text {
     position: absolute;
-    top: 50%; 
-    right: 50%;
-    transform: translate(50%,-50%);
+    text-align: center;
+    padding: 5px;
+    top: 10%; 
     text-transform: uppercase;
     font-family: verdana;
     font-size: 4em;
