--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ body {height: 100%; margin: 0;}
     background-color: antiquewhite;
 }
 
+.box {
+    display: block;
+}
+
 .footer {
     padding: 15px;
     background-color: black;
