--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {height: 100%; margin: 0; overflow-x: hidden;}
     width: 70px;
     height: 85px;
     cursor: pointer;
-    font-family: serif;
+    font-family: roboto;
     position: relative;
     top: 150px;
 }
@@ -78,7 +78,8 @@ body {height: 100%; margin: 0; overflow-x: hidden;}
 
 .footer {
     background-color: #000000;
-    color:#ffffff
+    color:#ffffff;
+    margin-top: 85px;
 }
 
 .fbox {
