--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-html {background: #2a2a2a;}
+html {background: #2a2a2a; height: 100%; overflow-y: hidden;}
 body {height: 100%; margin: 0; overflow-x: hidden;}
-
-
 
 .head_title {
     text-align: center;
