--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-html {background: #2a2a2a; height: 100%; overflow-y: hidden;}
-body {height: 100%; margin: 0; overflow-x: hidden;}
+html {background: #2a2a2a; height: 100%; overflow: hidden;}
+body {height: 100%; margin: 0; overflow: hidden;}
 
 .head_title {
     text-align: center;
