--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html {background: #2a2a2a; height: 100%; overflow: hidden;}
+html {background: #2a2a2a; height: 100%; } /*overflow: hidden;*/
 body {height: 100%; margin: 0; overflow: hidden;}
 
 .head_title {
