--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {height: 100%; margin: 0; overflow: hidden;}
     background-color: #000000;
     color:#ffffff;
     margin-top: 85px;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 .fbox {
