--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {background: #2a2a2a; height: 100%; } /*overflow: hidden;*/
-body {height: 100%; margin: 0; overflow: hidden;}
+body {height: 100%; margin: 0; } /*overflow: hidden;*/
 h1 {margin: 0;}
 
 .head_title {
