--- a/style.css
+++ b/style.css
@@ -78,11 +78,11 @@ h1 {margin: 0;}
 .footer {
     background-color: #000000;
     color:#ffffff;
-    margin-top: 85px;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
+    padding: 35px;
 }
 
 .fbox {
