--- a/style.css
+++ b/style.css
@@ -89,4 +89,43 @@ h1 {margin: 0;}
     display: block;
 }
 
+@media only screen and (max-width: 1024px) {
 
+    .head_title {
+        font-size: 3em;
+    }
+
+}
+
+@media only screen and (max-width: 900px) {
+
+    .cbox {
+        height: 460px;
+    }
+
+}
+
+
+@media only screen and (max-width: 800px) {
+
+    .cbox {
+        height: 570px;
+    }
+
+}
+
+@media only screen and (max-width: 700px) {
+
+    .cbox {
+        height: 700px;
+    }
+
+}
+
+@media only screen and (max-width: 600px) {
+
+    .cbox {
+        height: 1150px;
+    }
+
+}
