--- a/style.css
+++ b/style.css
@@ -101,6 +101,57 @@ h1 {margin: 0;}
 
 }
 
+@media only screen and (max-width: 795px) {
+
+    .head_title {
+        font-size: 2em;
+    }
+
+    .cbox {
+        height: 425px;
+    }
+
+}
+
+@media only screen and (max-width: 795px) {
+
+    .head_title {
+        font-size: 1.5em;
+    }
+
+    .cbox {
+        height: 425px;
+    }
+
+}
+
+@media only screen and (max-width: 400px) {
+
+    .head_title {
+        font-size: 1.2em;
+    }
+
+    .cbox {
+        height: 425px;
+    }
+
+}
+
+@media only screen and (max-width: 330px) {
+
+    .head_title {
+        font-size: 1em;
+    }
+
+    .cbox {
+        height: 425px;
+    }
+
+}
+
+
+
+
 @media only screen and (max-width: 900px) {
 
     .cbox {
