--- a/style.css
+++ b/style.css
@@ -96,7 +96,11 @@ h1 {margin: 0;}
     }
 
     .cbox {
-        height: 425px;
+        height: 413px;
+    }
+
+    #left-button, #right-button {
+        top: 180px;
     }
 
 }
@@ -108,7 +112,7 @@ h1 {margin: 0;}
     }
 
     .cbox {
-        height: 425px;
+        height: 413px;
     }
 
 }
