--- a/style.css
+++ b/style.css
@@ -122,7 +122,11 @@ h1 {margin: 0;}
         font-size: 2em;
     }
     .cbox {
-        height: 413px;
+        height: 455px;
+    }
+
+    #left-button, #right-button {
+        top: 200px;
     }
 
 }
@@ -134,7 +138,11 @@ h1 {margin: 0;}
     }
 
     .cbox {
-        height: 375px;
+        height: 475px;
+    }
+
+    #left-button, #right-button {
+        top: 210px;
     }
 
 }
@@ -146,7 +154,7 @@ h1 {margin: 0;}
     }
 
     .cbox {
-        height: 320px;
+        height: 485px;
     }
 
 }
