--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ h1 {margin: 0;}
         font-size: 2em;
     }
     .cbox {
-        height: 450px;
+        height: 451px;
     }
 
     #left-button, #right-button {
@@ -138,7 +138,7 @@ h1 {margin: 0;}
     }
 
     .cbox {
-        height: 470px;
+        height: 471px;
     }
 
     #left-button, #right-button {
@@ -154,7 +154,7 @@ h1 {margin: 0;}
     }
 
     .cbox {
-        height: 470px;
+        height: 471px;
     }
 
 }
@@ -166,7 +166,7 @@ h1 {margin: 0;}
     }
 
     .cbox {
-        height: 470px;
+        height: 483x;
     }
 
 }
@@ -178,7 +178,7 @@ h1 {margin: 0;}
     }
 
     .cbox {
-        height: 460px;
+        height: 483px;
     }
 
 }
