--- a/style.css
+++ b/style.css
@@ -89,6 +89,8 @@ h1 {margin: 0;}
     display: block;
 }
 
+
+/*
 @media only screen and (max-width: 1045px) {
 
     .head_title {
@@ -215,3 +217,5 @@ h1 {margin: 0;}
     }
 
 }
+
+*/
