--- a/style.css
+++ b/style.css
@@ -1,5 +1,669 @@
-html {background: #2a2a2a; height: 100%; } /*overflow: hidden;*/
-body {height: 100%; margin: 0; } /*overflow: hidden;*/
+/*slideer*/
+	.page-content {
+		width: 100% !important;
+		display: block !important;
+		padding: 0px 0 8px 0;
+	}
+
+	.adapt_slider{
+	  max-width: 100%;
+	  position: relative;
+	  margin: auto;
+	}
+
+	.adapt_slider .slider img {
+	  object-fit: cover;
+	  width: 100%;
+	  height: auto;
+	  box-shadow: 0px 7px 12px 0px #00000040;
+	  border-radius: 12px;
+	}
+
+	.adapt_slider .prev, .adapt_slider .next {
+	  cursor: pointer;
+	  position: absolute;
+	  top: 40%;
+	  width: auto;
+	  padding: 0;
+	  color: #000000;
+	  /*! transition: 0.6s ease; */
+	  border-radius: 3px;
+	  scale: 4;
+	  line-height: 1;
+	}
+	
+	.adapt_slider .next {
+	  right: 10px;
+	
+	}
+
+	.adapt_slider .prev {
+	  left: 10px;
+	
+	}
+
+	.adapt_slider .prev:hover, .adapt_slider .next:hover {
+	  color:#FFD200;
+	}
+
+	.slider_head_title{
+	  position: absolute;
+	  color: #f4f4f7;
+	  font-size: 35px;
+	  left: 50%;
+	  top: 50%;
+	  transform: translate(-50%, -50%);
+	  text-shadow: 1px 1px 1px #141415, 0 0 1em #141415;
+	}
+
+	.slider_bulets {
+	  text-align: center;
+	  width: fit-content;
+	  margin: 0 auto;
+	  top: -25px;
+	  position: relative;
+	}
+	
+	.slider_bulet{
+	  cursor: pointer;
+	  height: 16px;
+	  width: 16px;
+	  margin: 0 2px;
+	  background-color: #ddd;
+	  border-radius: 50%;
+	  display: inline-block;
+	  transition: background-color 0.6s ease;
+	}
+	
+	.select_bulet,
+	.slider_bulet:hover {
+	  background-color: #FFD200;
+	}
+
+	.adapt_slider .slider {
+	  -webkit-animation-name: fade;
+	  -webkit-animation-duration: 1.5s;
+	  animation-name: fade;
+	  animation-duration: 1.5s;
+	}
+	
+	@-webkit-keyframes fade {
+	  from {
+	  opacity: .4
+	  }
+	  to {
+	  opacity: 1
+	  }
+	}
+	
+	@keyframes fade {
+	  from {
+	  opacity: .4
+	  }
+	  to {
+	  opacity: 1
+	  }
+	}
+
+	.slide_text_box {
+	  top: 50%;
+	  position: absolute;
+	  left: 3%;
+	  bottom: 0;
+	  right: 0;
+	  display: table;
+	  height: -webkit-fill-available;
+	  width: 522px;
+	  font-family: Inter;
+	  font-weight: 400;
+	  font-size: 24px;
+	  line-height: 29.03px;
+	  letter-spacing: 0%;
+	  color: #000000;
+	}
+	
+	.slide_main_page {
+		display: flex;
+		height: 100%;
+	}
+	
+	.slide_main_page:hover {
+		color: #B39A78;
+		text-decoration: none;
+	}
+	
+	.slide_main_page:active  {
+		color: #B39A78;
+		text-decoration: none;
+	}
+	
+	.slide_title_box {
+		top: 10%;
+		position: absolute;
+		left: 3%;
+		bottom: 0;
+		right: 0;
+		display: table;
+		height: -webkit-fill-available;
+		width: 392px;
+	}
+	
+	.slide_title {
+
+	}
+	
+	.slide_title_text {
+		font-family: Inter;
+		font-weight: 600;
+		font-size: 40px;
+		line-height: 48.41px;
+		letter-spacing: 0%;
+		color: #000000;
+	}
+	
+	.project_class { 
+		display: block;
+	}
+	
+	.other_class {
+		display: block;
+	}
+	
+	.main_box_slider{
+		margin: 30px 10px 30px 10px;
+		height: 256px;
+	}
+	
+	@media screen and (max-width: 1335px)
+	{
+
+	.slide_title {
+		font-size: 48px;
+	}
+	.slide_text_box {
+		font-size: 18px !important;
+	}
+
+	}
+
+	@media screen and (max-width: 1125px)
+	{
+
+		.slide_title {
+			font-size: 38px;
+		}
+		.slide_text_box {
+			font-size: 16px !important;
+			width: 85% !important;
+		}
+		
+		.project_class { 
+			width: 155px !important;
+			height: 155px !important;
+			font-size: 16px !important;
+		}
+
+	}
+
+	@media screen and (max-width: 900px)
+	{
+
+	.slide_title {
+		font-size: 28px;
+	}
+	.slide_text_box {
+		font-size: 14px !important;
+		width: 85% !important;
+	}
+		.project_class { 
+			width: 120px !important;
+			height: 120px !important;
+			font-size: 12px !important;
+		}
+	
+	}
+	
+	@media screen and (max-width: 700px)
+	{
+
+	.slide_title {
+		font-size: 18px;
+	}
+	.slide_text_box {
+		font-size: 12px !important;
+		width: 85% !important;
+	}
+
+	}
+	
+	@media screen and (max-width: 600px)
+	{
+
+		.slide_title {
+			font-size: 16px;
+		}
+		.slide_text_box {
+			font-size: 9px !important;
+			width: 85% !important;
+		}
+		
+		.project_class { 
+			width: 80px !important;
+			height: 80px !important;
+			font-size: 8px !important;
+		}
+
+	}
+
+/* news */
+.news_but_left{
+	
+    position: relative;
+    left: -18px;
+    cursor: pointer;
+    user-select: none;
+    scale: 4;
+    line-height: 1;
+    height: 20px;
+}
+.news_but_left:hover{   
+    color:#FFD200;
+}
+
+.news_but_left:active{   
+    color:#000000;
+}
+
+.news_but_right {
+	
+    position: relative;
+    right: -18px;
+    cursor: pointer;
+    user-select: none;
+    scale: 4;
+    line-height: 1;
+    height: 20px;
+}
+.news_but_right:hover{   
+    color:#FFD200;
+}
+
+.news_but_right:active{   
+    color:#000000;
+}
+
+ .box_news_cards{ 
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.news_cards {
+  background-color: #fff;
+  width: 1075px;
+  min-height: 151px;
+  display: flex;
+  overflow-x: hidden;
+  border-radius: 12px;
+}
+
+.news_cards::-webkit-scrollbar {
+  display: none;
+}
+
+.news_card:last-child {
+  background-color: #ffffff;
+  margin: 0;
+  border-radius: 0;
+  border: 0;
+  min-width: 80px;
+}
+
+.news_card:last-child:hover, action {
+  cursor: default;
+  background-color: #ffffff;
+  min-width: 0;
+  margin: 0;
+  border-radius: 0;
+  border: 0;
+  min-width: 80px;
+}
+
+.news_card {
+	background-color: #D9D9D9;
+	min-width: 242px;
+	margin: 5px 32px 5px 0px;
+	border-radius: 12px;
+	border: 1px solid #d9d9d9;
+}
+
+.news_card a {
+	text-decoration: none;
+}
+
+.news_card:hover {
+	border: 1px solid #FFD200;
+    cursor: pointer;
+}
+
+.news_card:active {
+	border: 1px solid #d9d9d9;
+}
+
+.main_box_news{
+    
+    margin: 30px 10px 30px 10px;
+}
+
+.box_news{
+    
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0px 7px 12px 0px #00000040;
+    height: 350px;
+}
+
+.box_news h1, h2, h3, h4, h5 {
+    
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29.03px;
+    letter-spacing: 0%;
+    padding: 25px 0px 0px 20px;
+    user-select: none;
+    touch-action: none;
+}
+
+.box_news_list{
+    
+    height: 190px;
+    margin: 0px 15px 0px 15px;
+    overflow: hidden;
+    overflow-x: scroll;
+    white-space: nowrap;
+}
+
+.news_list{
+    
+    width: 237px;
+    background-color: #D9D9D9;
+    margin: 10px;
+    height: 141px;
+    border-radius: 12px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.box_news_all{
+    
+    text-align: right;
+    display: block;
+    height: 25px;
+    position: relative;
+    top: 25px;
+    width: 92%;
+    margin: 0 auto;
+    user-select: none;
+    touch-action: none;
+}
+
+.box_news_all a{
+	color:#000000;
+	font-family: Inter;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 19.35px;
+	letter-spacing: 0%;
+	text-decoration: underline;
+	text-decoration-style: solid;
+	text-decoration-offset: Auto;
+	text-decoration-thickness: Auto;
+	text-decoration-skip-ink: auto;
+	user-select: none;
+	touch-action: none;
+}
+
+.box_news_all a:hover{
+    color: #FFD200;
+}
+
+.box_news_all a:active{
+    color: #000000;
+}
+
+.news_img{
+  height: 114px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  width: 95%;
+  user-select: none;
+}
+
+.news_title{
+ width: 185px;
+ padding: 0px 0px 8px 12px;
+ font-family: Inter;
+ font-weight: 400;
+ font-size: 14px;
+ letter-spacing: 0%;
+ color: #000000;
+ user-select: none;
+}
+
+
+/* card */
+.body_site{
+	width: 1174px;
+	margin: 0 auto;
+	display: block;
+	background: #F3F3F4;
+}
+
+.box_card{
+	display: flex;	
+}
+.main_box_card{
+	margin:30px 10px 30px 10px;
+}
+
+.left_box_card{
+	
+    width: 75%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.right_box_card{
+  width: 25%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.left_card {  
+    /*! width: 245px; */
+    /*! height: 200px; */
+    background-color: #ffffff;
+    margin: 10px 20px 10px 0px;
+    /*! padding: 10px; */
+    border-radius: 12px;
+    flex: auto; /* растянуть по контейнеру*/
+    overflow: hidden;
+    box-shadow: 0px 7px 12px 0px #00000040;
+    display: grid;
+    border: 1px solid #ffffff
+}
+
+.left_card:hover{
+    border: 1px solid #FFD200;
+    cursor: pointer;
+}
+.left_card a {
+    text-decoration: none;
+    padding: 10px;
+}
+.left_card a:hover {
+    text-decoration: none;
+}
+.left_card a:active {
+    text-decoration: none;
+}
+.left_card a:focus {
+    text-decoration: none;
+}
+.left_card_img{
+  height: 114px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  width: 95%;
+  user-select: none;
+}
+
+.left_card_title{
+ width: 185px;
+ padding: 0px 0px 8px 12px;
+    
+ font-family: Inter;
+ font-weight: 600;
+ font-size: 20px;
+ line-height: 24.19px;
+ letter-spacing: 0%;
+ color: #000000;
+ user-select: none;
+}
+
+.right_card{
+    height: auto;
+    background-color: #ffffff;
+    margin: 10px 0px 10px 0px;
+    padding: 10px;
+    border-radius: 12px;
+    display: table;
+    box-shadow: 0px 7px 12px 0px #00000040;
+}
+
+.right_card_ava_up_box{
+    display: flex;
+    padding: 5px;
+    margin: 5px;
+    height: fit-content;
+    width: inherit;
+}
+.right_card_ava{
+    width: 80%;
+}
+.right_card_ava_border{
+    
+    display: flex;
+    justify-content: left;
+}
+.right_card_ava img{
+    
+    width: 100px;
+    border-radius: 50%;
+    border: 0px solid black;
+    height: 100px;
+}
+.right_card_ava_up{
+    width: 20%;
+    height: fit-content;
+}
+
+.right_card_ava_up span{
+    font-size: 35px;
+    rotate: 80deg;
+    display: block;
+    width: auto;
+    position: relative;
+    top: -5px;
+    color: #000000;
+    user-select: none;
+}
+.right_card_ava_up span:hover{
+    color: #FFD200;
+    cursor: pointer;
+}
+.right_card_ava_up span:active{
+    color: #000000;
+}
+
+.right_card_fio{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24.19px;
+    letter-spacing: 0%;
+}
+.right_card_pos{
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24.19px;
+    letter-spacing: 0%;
+}
+.right_card_exp{
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24.19px;
+    letter-spacing: 0%;
+}
+.right_card_but_box{
+    display: table-row;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.right_card_but {
+	width: 183;
+	height: 48;
+	border-radius: 8px;
+	background: #E1E1E1;
+	box-shadow: 0px 4px 4px 0px #00000040;
+	font-family: Inter;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 19.35px;
+	letter-spacing: 0%;
+	text-align: center;
+	color: #000000;
+	border: 0px solid #E1E1E1;
+}
+
+.right_card_but:focus  {
+/*background: #FFD200;*/
+}
+
+.right_card_but:active {
+background: #FFD200;
+}
+
+.right_card_but:hover {
+cursor: pointer;
+border: 1px solid #FFD200;
+}
+
+.right_card_but:disabled {
+cursor: default;
+background: #B2B2B2;
+border: 1px solid #B2B2B2;
+}
+
+.user_info {
+    font-family: Inter;
+    margin: 12px 0px 10px 22px;
+    user-select: none;
+    touch-action: none;
+}
+.user_info span {
+    font-family: Inter;
+    font-size: 11px;
+    color: #8a8a8a;
+}
+
+/*other*/
+
+html {background: #F3F3F4; height: 100%; scroll-behavior: behavior !important; } /*overflow: hidden;*/
+body {height: 100%; margin: 0; scroll-behavior: behavior !important; } /*overflow: hidden;*/
 h1 {margin: 0;}
 
 .head_title {
@@ -104,10 +768,7 @@ h1 {margin: 0;}
     #left-button, #right-button {
         top: 180px;
     }
-
 }
-
-
 
 @media only screen and (max-width: 900px) {
 
@@ -116,7 +777,6 @@ h1 {margin: 0;}
     }
 
 }
-
 
 @media only screen and (max-width: 800px) {
 
@@ -192,7 +852,6 @@ h1 {margin: 0;}
     }
 
 }
-
 
 @media only screen and (max-height: 750px) {
 
