--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 	  width: 100%;
 	  height: auto;
 	  box-shadow: 0px 7px 12px 0px #00000040;
+	  border: 1px solid #f3f3f4;
 	  border-radius: 12px;
 	}
 
