--- a/style.css
+++ b/style.css
@@ -4,13 +4,11 @@
 		display: block !important;
 		padding: 0px 0 8px 0;
 	}
-
 	.adapt_slider{
 	  max-width: 100%;
 	  position: relative;
 	  margin: auto;
 	}
-
 	.adapt_slider .slider img {
 	  object-fit: cover;
 	  width: 100%;
@@ -19,7 +17,6 @@
 	  border: 1px solid #f3f3f4;
 	  border-radius: 12px;
 	}
-
 	.adapt_slider .prev, .adapt_slider .next {
 	  cursor: pointer;
 	  position: absolute;
@@ -32,21 +29,17 @@
 	  scale: 4;
 	  line-height: 1;
 	}
-	
 	.adapt_slider .next {
 	  right: 10px;
 	
 	}
-
 	.adapt_slider .prev {
 	  left: 10px;
 	
 	}
-
 	.adapt_slider .prev:hover, .adapt_slider .next:hover {
 	  color:#FFD200;
 	}
-
 	.slider_head_title{
 	  position: absolute;
 	  color: #f4f4f7;
@@ -56,7 +49,6 @@
 	  transform: translate(-50%, -50%);
 	  text-shadow: 1px 1px 1px #141415, 0 0 1em #141415;
 	}
-
 	.slider_bulets {
 	  text-align: center;
 	  width: fit-content;
@@ -64,7 +56,6 @@
 	  top: -25px;
 	  position: relative;
 	}
-	
 	.slider_bulet{
 	  cursor: pointer;
 	  height: 16px;
@@ -75,19 +66,16 @@
 	  display: inline-block;
 	  transition: background-color 0.6s ease;
 	}
-	
 	.select_bulet,
 	.slider_bulet:hover {
 	  background-color: #FFD200;
 	}
-
 	.adapt_slider .slider {
 	  -webkit-animation-name: fade;
 	  -webkit-animation-duration: 1.5s;
 	  animation-name: fade;
 	  animation-duration: 1.5s;
 	}
-	
 	@-webkit-keyframes fade {
 	  from {
 	  opacity: .4
@@ -96,7 +84,6 @@
 	  opacity: 1
 	  }
 	}
-	
 	@keyframes fade {
 	  from {
 	  opacity: .4
@@ -105,7 +92,6 @@
 	  opacity: 1
 	  }
 	}
-
 	.slide_text_box {
 	  top: 50%;
 	  position: absolute;
@@ -122,22 +108,18 @@
 	  letter-spacing: 0%;
 	  color: #000000;
 	}
-	
 	.slide_main_page {
 		display: flex;
 		height: 100%;
 	}
-	
 	.slide_main_page:hover {
 		color: #B39A78;
 		text-decoration: none;
 	}
-	
 	.slide_main_page:active  {
 		color: #B39A78;
 		text-decoration: none;
 	}
-	
 	.slide_title_box {
 		top: 10%;
 		position: absolute;
@@ -148,11 +130,9 @@
 		height: -webkit-fill-available;
 		width: 392px;
 	}
-	
 	.slide_title {
 
 	}
-	
 	.slide_title_text {
 		font-family: Inter;
 		font-weight: 600;
@@ -161,35 +141,28 @@
 		letter-spacing: 0%;
 		color: #000000;
 	}
-	
 	.project_class { 
 		display: block;
 	}
-	
 	.other_class {
 		display: block;
 	}
-	
 	.main_box_slider{
 		margin: 30px 10px 30px 10px;
 		height: 256px;
 	}
-	
 	@media screen and (max-width: 1335px)
 	{
-
 	.slide_title {
 		font-size: 48px;
 	}
 	.slide_text_box {
-		font-size: 18px !important;
+		font-size: 24px !important;
 	}
 
 	}
-
 	@media screen and (max-width: 1125px)
 	{
-
 		.slide_title {
 			font-size: 38px;
 		}
@@ -197,19 +170,15 @@
 			font-size: 16px !important;
 			width: 85% !important;
 		}
-		
 		.project_class { 
 			width: 522px !important;
-			height: 90px !important;
-			font-size: 16px !important;
-			line-height: 1.4;
+			height: 70px !important;
+			font-size: 24px !important;
+			line-height: 29.03px;
 		}
-
 	}
-
 	@media screen and (max-width: 900px)
 	{
-
 	.slide_title {
 		font-size: 28px;
 	}
@@ -220,11 +189,15 @@
 		.project_class { 
 			width: 522px !important;
 			height: 90px !important;
-			font-size: 14px !important;
+			font-size: 24px !important;
 		}
 	
 	}
-	
+	@media screen and (max-width: 900px)
+	{
+
+	}
+
 	@media screen and (max-width: 700px)
 	{
 
@@ -240,7 +213,6 @@
 	
 	@media screen and (max-width: 600px)
 	{
-
 		.slide_title {
 			font-size: 16px;
 		}
@@ -250,23 +222,34 @@
 		}
 		
 		.project_class { 
-			width: 310px !important;
+			width: 460px !important;
 			height: 80px !important;
-			font-size: 14px !important;
+			font-size: 24px !important;
+			line-height: 1.2;
 		}
-
+		
+		.slide_title_text {
+			font-family: Inter;
+			font-weight: 600;
+			font-size: 40px;
+			line-height: 48.41px;
+			letter-spacing: 0%;
+			color: #000000;
+		}
 	}
 
 /* news */
 .news_but_left{
-	
     position: relative;
-    left: -18px;
+    left: -28px;
     cursor: pointer;
     user-select: none;
     scale: 4;
     line-height: 1;
     height: 20px;
+    top: 85px;
+    width: 10px;
+    text-align: center;
 }
 .news_but_left:hover{   
     color:#FFD200;
@@ -277,14 +260,16 @@
 }
 
 .news_but_right {
-	
     position: relative;
-    right: -18px;
+    right: -28px;
     cursor: pointer;
     user-select: none;
     scale: 4;
     line-height: 1;
     height: 20px;
+    top: 85px;
+    width: 10px;
+    text-align: center;
 }
 .news_but_right:hover{   
     color:#FFD200;
@@ -295,49 +280,47 @@
 }
 
  .box_news_cards{ 
-  height: 200px;
+  /*! height: 200px; */
   display: flex;
   justify-content: center;
-  align-items: center;
+  /*! align-items: center; */
+  margin: 25px 50px 0px 50px;
 }
 
 .news_cards {
   background-color: #fff;
-  width: 1075px;
-  min-height: 151px;
+  max-width: 1075px;
   display: flex;
   overflow-x: hidden;
-  border-radius: 12px;
 }
 
 .news_cards::-webkit-scrollbar {
   display: none;
 }
-
-.news_card:last-child {
-  background-color: #ffffff;
-  margin: 0;
-  border-radius: 0;
-  border: 0;
-  min-width: 80px;
+.view_card{
+	margin: 5px 14px 5px 0px;
+}
+.news_link {
+		/*! margin: 5px 32px 5px 0px; */
 }
 
-.news_card:last-child:hover, action {
-  cursor: default;
+.view_card:last-child div {
   background-color: #ffffff;
-  min-width: 0;
   margin: 0;
   border-radius: 0;
   border: 0;
-  min-width: 80px;
+  width: 110px;
+  cursor: default;
 }
 
 .news_card {
 	background-color: #D9D9D9;
-	min-width: 242px;
-	margin: 5px 32px 5px 0px;
+	width: 242px;
+	/*! margin: 5px 32px 5px 0px; */
 	border-radius: 12px;
-	border: 1px solid #d9d9d9;
+	border: 1px solid #fff;
+	height: 168px;
+	background-size: cover;
 }
 
 .news_card a {
@@ -354,20 +337,17 @@
 }
 
 .main_box_news{
-    
     margin: 30px 10px 30px 10px;
 }
 
 .box_news{
-    
     background-color: #ffffff;
     border-radius: 12px;
     box-shadow: 0px 7px 12px 0px #00000040;
-    height: 350px;
+    /*! height: 100%; */
 }
 
-.box_news h1, h2, h3, h4, h5 {
-    
+.box_news h1 {
     font-family: Inter;
     font-weight: 600;
     font-size: 24px;
@@ -379,7 +359,6 @@
 }
 
 .box_news_list{
-    
     height: 190px;
     margin: 0px 15px 0px 15px;
     overflow: hidden;
@@ -388,7 +367,6 @@
 }
 
 .news_list{
-    
     width: 237px;
     background-color: #D9D9D9;
     margin: 10px;
@@ -398,17 +376,17 @@
     vertical-align: top;
 }
 
-.box_news_all{
-    
+.box_news_all{  
     text-align: right;
-    display: block;
-    height: 25px;
-    position: relative;
-    top: 25px;
+    display: table;
+    height: 30px;
+    /*! position: relative; */
+    /*! top: 25px; */
     width: 92%;
     margin: 0 auto;
     user-select: none;
     touch-action: none;
+    padding: 0px 0px 25px 0px;
 }
 
 .box_news_all a{
@@ -425,6 +403,8 @@
 	text-decoration-skip-ink: auto;
 	user-select: none;
 	touch-action: none;
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .box_news_all a:hover{
@@ -435,18 +415,9 @@
     color: #000000;
 }
 
-.news_img{
-  height: 114px;
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  width: 95%;
-  user-select: none;
-}
-
 .news_title{
- width: 185px;
- padding: 0px 0px 8px 12px;
+ width: 235px;
+ padding: 16px 8px 16px 8px;
  font-family: Inter;
  font-weight: 400;
  font-size: 14px;
@@ -455,10 +426,9 @@
  user-select: none;
 }
 
-
 /* card */
 .body_site{
-	width: 1174px;
+	max-width: 1174px;
 	margin: 0 auto;
 	display: block;
 	background: #F3F3F4;
@@ -472,14 +442,13 @@
 }
 
 .left_box_card{
-	
     width: 75%;
     display: flex;
     flex-wrap: wrap;
 }
 
 .right_box_card{
-  width: 25%;
+  width: 30%;
   display: flex;
   flex-wrap: wrap;
 }
@@ -494,7 +463,7 @@
     overflow: hidden;
     box-shadow: 0px 7px 12px 0px #00000040;
     display: grid;
-    border: 1px solid #ffffff
+    border: 1px solid #ffffff;
 }
 
 .left_card:hover{
@@ -526,7 +495,6 @@
 .left_card_title{
  width: 185px;
  padding: 0px 0px 8px 12px;
-    
  font-family: Inter;
  font-weight: 600;
  font-size: 20px;
@@ -535,7 +503,6 @@
  color: #000000;
  user-select: none;
 }
-
 .right_card{
     height: auto;
     background-color: #ffffff;
@@ -545,7 +512,6 @@
     display: table;
     box-shadow: 0px 7px 12px 0px #00000040;
 }
-
 .right_card_ava_up_box{
     display: flex;
     padding: 5px;
@@ -558,11 +524,13 @@
 }
 .right_card_ava_border{
     
-    display: flex;
-    justify-content: left;
+    height: 100px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 50px;
+    width: 100px;
 }
 .right_card_ava img{
-    
     width: 100px;
     border-radius: 50%;
     border: 0px solid black;
@@ -572,7 +540,6 @@
     width: 20%;
     height: fit-content;
 }
-
 .right_card_ava_up span{
     font-size: 35px;
     rotate: 80deg;
@@ -590,7 +557,6 @@
 .right_card_ava_up span:active{
     color: #000000;
 }
-
 .right_card_fio{
     font-weight: 600;
     font-size: 20px;
@@ -614,7 +580,6 @@
     text-align: center;
     vertical-align: middle;
 }
-
 .right_card_but {
 	width: 183;
 	height: 48;
@@ -660,6 +625,73 @@ border: 1px solid #B2B2B2;
     font-family: Inter;
     font-size: 11px;
     color: #8a8a8a;
+}
+
+@media screen and (max-width: 1173px)
+{
+	.news_cards {
+	}
+	.news_but_left {
+	}
+	.news_but_right {
+	}
+}
+
+@media screen and (max-width: 1125px)
+{
+	.right_box_card {
+		width: 30%;
+	}
+	.left_box_card {
+		width: 70%;
+	}
+}
+
+@media screen and (max-width: 1050px)
+{
+	.right_card_but_box {
+		display: block;
+	}
+}
+
+@media screen and (max-width: 1025px)
+{
+	.right_box_card {
+		width: 35%;
+	}
+	.left_box_card {
+		width: 65%;
+	}
+}
+
+@media screen and (max-width: 925px)
+{
+
+}
+
+@media screen and (max-width: 825px)
+{
+	.right_box_card {
+		width: 40%;
+	}
+	.left_box_card {
+		width: 60%;
+	}
+}
+
+@media screen and (max-width: 725px)
+{
+	.right_box_card {
+		width: 50%;
+	}
+	.left_box_card {
+		width: 50%;
+	}
+}
+
+@media screen and (max-width: 625px)
+{
+
 }
 
 /*other*/
